crates/pardosa-genome/tests/compile_fail/usize_field.stderr
error: EVT-004: GenomeSafe: usize has platform-dependent size. Use u32/u64 for portable serialization.
 --> tests/compile_fail/usize_field.rs:5:12
  |
5 |     count: usize,
  |            ^^^^^
